2010-01-15  Darin Fisher  <darin@chromium.org>

        Disable this test temporarily since it is failing on all of the
        builders.

        * fast/history/history-length.html: Removed.
        * fast/history/history-length.html-disabled: Copied from fast/history/history-length.html.

2010-01-15  Darin Fisher  <darin@chromium.org>

        Reviewed by Brady Eidson.

        history.length does not return number of elements in history list
        https://bugs.webkit.org/show_bug.cgi?id=24472

        * fast/history/history-length-expected.txt: Added.
        * fast/history/history-length.html: Added.
        * fast/loader/stateobjects/document-destroyed-navigate-back-expected.txt: fix up test expectations
        * fast/loader/stateobjects/document-destroyed-navigate-back-with-fragment-scroll-expected.txt: fix up test expectations

2010-01-15  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.

        REGRESISON: Google maps buttons not working properly
        https://bugs.webkit.org/show_bug.cgi?id=31871

        REGRESSION(r52948): JavaScript exceptions thrown on Google Maps when
        getting directions for a second time
        https://bugs.webkit.org/show_bug.cgi?id=33446
        
        Added a test for these bugs.

        * fast/js/pic/undictionary-expected.txt: Added.
        * fast/js/pic/undictionary.html: Added.

2010-01-15  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        svg/custom/marker-changes.svg is flaky
        https://bugs.webkit.org/show_bug.cgi?id=33728

        removing gratuitous setTimeout.

        * svg/custom/marker-changes.svg:

2010-01-15  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        transitions/shorthand-border-transitions.html is still flaky on slower bots
        https://bugs.webkit.org/show_bug.cgi?id=33721

        Increase the tolerance. The test still tests what it was meant to.

        * transitions/shorthand-border-transitions.html:
