@@ -1,5 +1,16 @@
 2010-01-15  Darin Fisher  <darin@chromium.org>
 
+        Reviewed by Dimitri Glazkov.
+
+        Disable page cache and add diagnostic output in the failure case.
+        https://bugs.webkit.org/show_bug.cgi?id=33749
+
+        * fast/history/history-length-expected.txt:
+        * fast/history/history-length.html: Copied from fast/history/history-length.html-disabled.
+        * fast/history/history-length.html-disabled: Removed.
+
+2010-01-15  Darin Fisher  <darin@chromium.org>
+
         Disable this test temporarily since it is failing on all of the
         builders.
 
